# beerxml

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
data/: README.md  TubbsII.xml  grain.xml
doc/: README.md  beerxml.html  beerxml.md
src/: data.rs  error.rs  lib.rs  xml.rs
src/data/: equipment.rs  fermentable.rs  hop.rs  mash.rs  mash_step.rs  misc.rs  mod.rs  recipe.rs  style.rs  water.rs  yeast.rs
src/json/: read.rs  write.rs
src/toml/: read.rs  write.rs
src/xml/: mod.rs  read.rs  write.rs
src/xml/read/: equipment.rs  fermentable.rs  hop.rs  mash.rs  mash_step.rs  misc.rs  mod.rs  recipe.rs  style.rs  water.rs  yeast.rs
src/yaml/: mod.rs  read.rs  write.rs
