[package]
name = "beerxml"
version = "0.1.8"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "beerxml/json/yaml/toml parser generator"
documentation = "https://docs.rs/crate/beerxml"
homepage = "http://brewcalc.org"
repository = "https://github.com/andete/beerxml"
keywords = ["brewing", "beer", "mead"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "andete/beerxml" }

[dependencies]
clap = "2.25"
env_logger = "0.3"
error-chain = "0.10"
log = "0.3"
quick-xml = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
serde_yaml = "0.7"
strum = "0.6"
strum_macros = "0.6"
